package pl.edu.agh.po.model;

public enum DeviceStatus {
    AVAILABLE,
    BROKEN,
    MAINTANCE,
    IN_USE
}
