package pl.edu.agh.po.model;

public enum DeviceType {
    ROUTER,
    SWITCH,
    ACCESS_POINT
}
