package pl.edu.agh.po.model;

public enum UserRole {
    TECHNICIAN,
    CEO,
    ADMIN
}
