@startuml

enum DeviceStatus {
  AVAILABLE
  BROKEN
  MAINTENANCE
  IN_USE
}

enum DeviceType{
  ROUTER
  SWITCH
  ACCESS_POINT
}

enum UserRole {
  TECHNICIAN
  CEO
  ADMIN
}


class User {
  - Long id
  - String login
  - String password
  - UserRole role
  + getId(): Long
  + getLogin(): String
  + setLogin(String login): void
  + getPassword(): String
  + setPassword(String password): void
  + getRole(): UserRole
  + setRole(UserRole role): void
}

class Device {
  - Long id
  - DeviceType type
  - DeviceStatus status
  - String model
  - String hostName
  - int numberOfEthInterfaces
  - String configuration
  + getId(): Long
  + getType(): DeviceType
  + setType(DeviceType type): void
  + getStatus(): DeviceStatus
  + setStatus(DeviceStatus status): void
  + getModel(): String
  + setModel(String model): void
  + getHostName(): String
  + setHostName(String hostName): void
  + getNumberOfEthInterfaces(): int
  + setNumberOfEthInterfaces(int number): void
  + getConfiguration(): String
  + setConfiguration(String configuration): void
}

interface DAO<T> {
  + save(T entity): void
  + findById(Long id): T
  + findAll(): List<T>
  + update(T entity): void
  + deleteById(Long id): void
}

class DeviceDAO implements DAO {
  - static DeviceDAO instance
  - DeviceDAO()
  + static getInstance(): DeviceDAO
  + save(Device device): void
  + findById(Long id): Device
  + findAll(): List<Device>
  + update(Device device): void
  + deleteById(Long id): void
  + findByStatus(DeviceStatus status): List<Device>
  + findByType(DeviceType type): List<Device>
}

class UserDAO implements DAO {
  - static UserDAO instance
  - UserDAO()
  + static getInstance(): UserDAO
  + save(User user): void
  + findById(Long id): User
  + findAll(): List<User>
  + update(User user): void
  + deleteById(Long id): void
  + findByRole(UserRole role): List<User>
  + findByLogin(String login): User
}

DeviceDAO ..> Device : uses
UserDAO ..> User : uses

class AuthenticationService {
  - static AuthenticationService instance
  - User currentUser
  - AuthenticationService()
  + static getInstance(): AuthenticationService
  + login(String login, String password): User
  + logout(): void
  + getCurrentUser(): User
  + isLoggedIn(): boolean
}

AuthenticationService ..> UserDAO : uses
AuthenticationService ..> User : uses

class BusinessManager {
  - static BusinessManager instance
  - BusinessManager()
  + static getInstance(): BusinessManager
  + addDevice(User user, Device device): void
  + removeDevice(User user, Long deviceId): void
  + connectDevices(User user, Long device1Id, Long device2Id): void
  + changeDeviceConfig(User user, Long deviceId, String config): void
  + getAllDevices(User user): List<Device>
  + getDeviceById(User user, Long id): Device
  + updateDevice(User user, Device device): void
  + registerUser(User requestingUser, User newUser): void
  + blockUser(User requestingUser, Long userId): void
  + unblockUser(User requestingUser, Long userId): void
  + getAllUsers(User requestingUser): List<User>
  + getUserById(User requestingUser, Long id): User
  + generateReport(User user): String
}

BusinessManager ..> DeviceDAO : uses
BusinessManager ..> UserDAO : uses
BusinessManager ..> User : uses
BusinessManager ..> Device : uses

@enduml